--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@rxweb/reactive-form-validators": "^2.1.7",
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-datatable": "^20.0.0",
+    "@types/file-saver": "^2.0.5",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "^2.9.4",
@@ -57,6 +58,7 @@
     "core-js": "2.5.1",
     "echarts": "^5.3.3",
     "eva-icons": "^1.1.3",
+    "file-saver": "^2.0.5",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
